app-base/back/back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: back-cnt
          image: 'terezabisharyan/kubia:'
          ports:
            - containerPort: 5000
