app-base/back/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-deploy
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      db: postgres
  template:
    metadata:
      labels:
        db: postgres
    spec:
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: pg-cnt
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/postgresql/data
