app-base/back/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pg-sts
spec:
  #serviceName: database
  replicas: 1
  selector:
    matchLabels:
      db: postgres
  template:
    metadata:
      labels:
        db: postgres
        selector: pg-sts
    spec:
      containers:
      - name: pg-cnt
        image: postgres
        volumeMounts:
        - name: db-volume
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: db-volume
    spec:
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 200Mi
