app-base/back/db-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: ingress-nginx
spec:
  clusterIP: None
  selector:
    db: postgres
  ports:
    - port: 5432
      targetPort: 5432
