app-base/back/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: ingress-nginx
spec:
  type: ClusterIP
  selector:
    db: postgres
  ports:
    - port: 5432
      targetPort: 5432
